--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <img src="WebBanner2023.png" alt="Banner" width="900" height="300">
     <h1><b>ENG0018 Computer Laboratory 2025/26</b><h1>
-      <h2>Student URN: 6666666666 77777777</h2>
+      <h2>Student URN: 6906288</h2>
       <hr>
       <h2 style=”font-family:calibri:”><b>Conference paper: Bridge Deck Repairs</b></h2>
       <hr>
@@ -85,7 +85,33 @@
                 <td><a href="#References">References</td>
                 </tr>
                 </table>
-                
+                <table>
+  <tr>
+    <th>€ Cost of repairs</th>
+    <th>Lifespan of repairs (years)</th>
+  </tr>
+  <tr>
+    <td>0.7 m€</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>3.3 m€</td>
+    <td>4</td>
+  </tr>
+  <tr>
+    <td>2.6 m€</td>
+    <td>5</td>
+  </tr>
+  <tr>
+    <td>17.4 m€</td>
+    <td>7</td>
+  </tr>
+  <tr>
+    <td>8.8 m€</td>
+    <td>9</td>
+  </tr>
+</table>
+
                 
 
 
