--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
               <h3 id="Abstract">Abstract</h3>
               <p class ="ex1">
               <pre>
-              This article presents the design, implementation and evaluation of the usage of the use of smart prosthetics using electromyography (EMG) signals and AI to control movement, targeted specifically for resource limited settings such as third world countries.  Using EMG sensors,3D printed prosthetics can use electrical activity in arm muscles to signal movements in the prosthetics to do things such as pinch and close of the hand. The designs focus is also to make them affordable and maintainable so, it is readily available for everyone. Tests were carried out to see how fast the prosthetic responded to muscle signals. It showed a 90 percent accuracy with a response time of less than 150 milliseconds. This article shows the combination of 3D printing and AI can be used to make an affordable alternative for people in resource limited settings.
+              This article presents the design, implementation and evaluation of the usage of the use of smart prosthetics using electromyography (EMG) signals and AI to control movement, 
+              targeted specifically for resource limited settings such as third world countries.  Using EMG sensors,3D printed prosthetics can use electrical activity in arm muscles to signal movements in the prosthetics to do things such as pinch and close of the hand. 
+                The designs focus is also to make them affordable and maintainable so, it is readily available for everyone. Tests were carried out to see how fast the prosthetic responded to muscle signals. It showed a 90 percent accuracy with a response time of less than 150 milliseconds. 
+                This article shows the combination of 3D printing and AI can be used to make an affordable alternative for people in resource limited settings.
             
               </pre>
               </p>
