--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
               even places where it is hard to come by.
               </pre>
               </p>
-              <h3 id=”Analysis and discussion”>Analysis and discussion</h3>
-              <p class ='ex1">
+              <h3 id="Analysis and Discussion">Analysis and Discussion</h3>
+               <p class ="ex1">
               <pre>
               There are downsides to EMG signals, this includes them being noisy and interference so using preprocessing can help overcome this negative. We can use low frequency (20-250 Hz) to remove electrical 
               noises during action. Machine learning models can use features such as average signal strength over time and waveform length to recognise signals to perform specific hand gestures for example one 
