Insert table of contents in index.html
Added a table of contents to the HTML document.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,26 @@
             </style>
             <body style="background-color:#FFFFFF;margin-left:50px;">
             <hr>
+      <!table of contents>
+                <table>
+
+                <tr>
+                <th><h3>Table of contents</h3></th>
+                </tr>
+                <tr>
+                <td><a href="#Abstract">Abstract</td>
+                </tr>
+                <tr>
+                <td><a href="#Introduction">Introduction</td>
+                </tr>
+                <tr>
+                <td><a href="#Analysis and discussion">Analysis and discussion</td>
+                
+                <tr>
+                <td><a href="#References">References</td>
+                </tr>
+                </table>
+                <table>
               <h3 id="Abstract">Abstract</h3>
               <p class ="ex1">
               <pre>
@@ -90,11 +110,12 @@
               patients had improved accuracy of force and less problems when grabbing onto objects than without it. (https://jneuroengrehab.biomedcentral.com/articles/10.1186/s12984-023-01237-1?utm)
               Also using real world conditions, daily use of prosthetics can be affected due to additional challenges like sweat or prosthesis fitting, which can cause irritation due to residual limbs. This is important for future projects 
               to get around, to make the life of the patient more comfortable. Even further improvements can be made by pushing accuracy further to 97 percent, studies show in UC Davis, research shows that fusing EMG with other sensing modalities 
-              like FMG, a non-invasive technique that uses pressure-sensitive sensors to detect muscle activity by measuring changes in muscle volume and surface forces during movement. (https://engineering.ucdavis.edu/news/combining-signals-could-make-better-control-prosthetics?utm)
+              like FMG, a non-invasive technique that uses pressure-sensitive sensors to detect muscle activity by measuring changes in muscle volume and surface forces during movement. 
+              (https://engineering.ucdavis.edu/news/combining-signals-could-make-better-control-prosthetics?utm)
 
               </pre>
               </p>
-              ex1
+      
                 <!table of contents>
                 <table>
 
