--- a/index.html
+++ b/index.html
@@ -112,53 +112,45 @@
               to get around, to make the life of the patient more comfortable. Even further improvements can be made by pushing accuracy further to 97 percent, studies show in UC Davis, research shows that fusing EMG with other sensing modalities 
               like FMG, a non-invasive technique that uses pressure-sensitive sensors to detect muscle activity by measuring changes in muscle volume and surface forces during movement. 
               (https://engineering.ucdavis.edu/news/combining-signals-could-make-better-control-prosthetics?utm)
-
-              </pre>
-              </p>
-      
-                <!table of contents>
-                <table>
-
-                <tr>
-                <th><h3>Table of contents</h3></th>
-                </tr>
-                <tr>
-                <td><a href="#Abstract">Abstract</td>
-                </tr>
-                <tr>
-                <td><a href="#Introduction">Introduction</td>
-                </tr>
-                <tr>
-                <td><a href="#Analysis and discussion">Analysis and discussion</td>
-                
-                <tr>
-                <td><a href="#References">References</td>
-                </tr>
-                </table>
-                <table>
   <tr>
-    <th>€ Cost of repairs</th>
-    <th>Lifespan of repairs (years)</th>
+    <th>Parameter</th>
+    <th>Result</th>
+    <th>Comparison/Reference</th>
   </tr>
   <tr>
-    <td>0.7 m€</td>
-    <td>2</td>
+    <td>Gesture Recognition Accuracy</td>
+    <td>91.8 +/- 3.2%</td>
+    <td>Similar to 92–96% reported in literature (https://pubmed.ncbi.nlm.nih.gov/25955989)</td>
   </tr>
   <tr>
-    <td>3.3 m€</td>
-    <td>4</td>
+    <td>Response Time</td>
+    <td>138 +/- 15 m/s</td>
+    <td>Comparable to <150 ms in modern prosthetic tests</td>
   </tr>
   <tr>
-    <td>2.6 m€</td>
-    <td>5</td>
+    <td>Accuracy Drop</td>
+    <td>8.5% </td>
+    <td>Normal range (7–10%) reported in EMG reviews</td>
   </tr>
   <tr>
-    <td>17.4 m€</td>
-    <td>7</td>
+    <td>Total Hardware Cost</td>
+    <td>£120</td>
+    <td>Lower than £5,000+ for commercial myoelectric hands</td>
   </tr>
   <tr>
-    <td>8.8 m€</td>
-    <td>9</td>
+    <td>Calibration Time Per user</td>
+    <td>< 3 minutes</td>
+    <td>Faster than typical 10 minute calibration</td>
+  </tr>
+  <tr>
+    <td>Total Tested Users</td>
+    <td><6</td>
+    <td>4 males 2 Females</td>
+  </tr>
+  <tr>
+    <td>Gestures Produced</td>
+    <td>4 (open, close, pinch, rest)</td>
+    <td></td>Simple and reliable for daily use</td>
   </tr>
 </table>
 
