--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <tr>
     <td>Gestures Produced</td>
     <td>4 (open, close, pinch, rest)</td>
-    <td></td>Simple and reliable for daily use</td>
+    <td>Simple and reliable for daily use</td>
   </tr>
 </table>
 
