--- a/index.html
+++ b/index.html
@@ -95,23 +95,22 @@
               There are downsides to EMG signals, this includes them being noisy and interference so using preprocessing can help overcome this negative. We can use low frequency (20-250 Hz) to remove electrical 
               noises during action. Machine learning models can use features such as average signal strength over time and waveform length to recognise signals to perform specific hand gestures for example one 
               signal can be stronger than another to perform a closed hand by using these signals to send to the servo motors to move the prosthetic arm in real time. This allows the arm to adapt to the different 
-              muscle recognition patterns which is more reliable and easier to control. Research also shows that pattern recognition is faster than any other technique in prosthetic control. 
-              (https://pubmed.ncbi.nlm.nih.gov/31652616/)
+              muscle recognition patterns which is more reliable and easier to control. Research also shows that pattern recognition is faster than any other technique in prosthetic control. <a href=”https://pubmed.ncbi.nlm.nih.gov/31652616/”>Nawadita Paruajuli (2019)</a>
                 
               Testing And Evaluation.
               The accuracy of the prosthetic showed 90 percent with its latency being fast in response with a reaction speed of 150 milliseconds whilst using hardware costs for 120 pounds under. These numbers align with other smart 
-              prosthetics test using a similar design, achieving 93 percent accuracy for wrist movements in amputees in research labs (https://www.researchgate.net/publication/305697287_Myoelectric_control_of_prosthetic_hands_state-of-the-art_review). 
-              Also, in real world conditions with less resources. (https://ms.copernicus.org/articles/12/69/2021/ms-12-69-2021.pdf?utm_source) These meet the conditions as users must be able to calibrate the hand in under 3 minutes, 
-              parts are easily repairable and simple gestures can be performed and most importantly taking on real world constraints such as complexity and cost. (https://armejournal.org/index.php/arme/article/view/4243?utm)
+              prosthetics test using a similar design, achieving 93 percent accuracy for wrist movements in amputees in research labs <a href=”https://www.researchgate.net/publication/305697287_Myoelectric_control_of_prosthetic_hands_state-of-the-art_review”>Geethanjali Purushotman (2016)</a>. 
+              Also, in real world conditions with less resources.<a href=”https://ms.copernicus.org/articles/12/69/2021/ms-12-69-2021.pdf?utm_source”>Saygin Siddiq Ahmed (2021)</a> These meet the conditions as users must be able to calibrate the hand in under 3 minutes, 
+              parts are easily repairable and simple gestures can be performed and most importantly taking on real world constraints such as complexity and cost. <a href=”https://armejournal.org/index.php/arme/article/view/4243?utm”>Pratik Gurav (2024)</a>
               
               Future Improvements
               Smart prosthetics at present are already remarkable however, in the future there will be even further steps to improve and find solution to prosthetic problems. Haptic feedback can be implemented with the EMG feedback 
               by adding pressure sensors to allow the user to feel like they are gripping. Studies show that with the combination of these two techniques, there will be a boost in performance when handling objects, tests showing that 
-              patients had improved accuracy of force and less problems when grabbing onto objects than without it. (https://jneuroengrehab.biomedcentral.com/articles/10.1186/s12984-023-01237-1?utm)
+              patients had improved accuracy of force and less problems when grabbing onto objects than without it. <a href=”(https://jneuroengrehab.biomedcentral.com/articles/10.1186/s12984-023-01237-1?utm)”>Jack Tchimino (2023)</a>
               Also using real world conditions, daily use of prosthetics can be affected due to additional challenges like sweat or prosthesis fitting, which can cause irritation due to residual limbs. This is important for future projects 
               to get around, to make the life of the patient more comfortable. Even further improvements can be made by pushing accuracy further to 97 percent, studies show in UC Davis, research shows that fusing EMG with other sensing modalities 
               like FMG, a non-invasive technique that uses pressure-sensitive sensors to detect muscle activity by measuring changes in muscle volume and surface forces during movement. 
-              (https://engineering.ucdavis.edu/news/combining-signals-could-make-better-control-prosthetics?utm)
+              <a href=”https://engineering.ucdavis.edu/news/combining-signals-could-make-better-control-prosthetics?utm”>Andy Fell 2025</a>
   <tr>
     <th>Parameter</th>
     <th>Result</th>
