Update text to replace 'arm' with 'hand'

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <h3 id="Introduction">Introduction</h3>
                <p class ="ex1">
               <pre>
-              Losing a hand or arm can completely change a person’s life, making even simple tasks difficult. The solution to this problem, prosthetics. Prosthetic arms, first created in the 16th century 
+              Losing a hand can completely change a person’s life, making even simple tasks difficult. The solution to this problem, prosthetics. Prosthetic hands, first created in the 16th century 
               by French surgeon Ambroise Pare, are now advanced in modern day however, many of them are expensive and hard to repair and maintain, especially in countries with limited resources and are 
               extremely needed due to poor working conditions causing high injury rates. This leaves a huge gap between what technology can do and what people can access. This article was created to close
               this gap by using a smart prosthetic hand using electromyography (EMG) signals, that are naturally produced in the muscles. Computer AI systems can understand these signals to produce a response 
@@ -94,7 +94,7 @@
               <pre>
               There are downsides to EMG signals, this includes them being noisy and interference so using preprocessing can help overcome this negative. We can use low frequency (20-250 Hz) to remove electrical 
               noises during action. Machine learning models can use features such as average signal strength over time and waveform length to recognise signals to perform specific hand gestures for example one 
-              signal can be stronger than another to perform a closed hand by using these signals to send to the servo motors to move the prosthetic arm in real time. This allows the arm to adapt to the different 
+              signal can be stronger than another to perform a closed hand by using these signals to send to the servo motors to move the prosthetic arm in real time. This allows the hand to adapt to the different 
               muscle recognition patterns which is more reliable and easier to control. Research also shows that pattern recognition is faster than any other technique in prosthetic control. <a href=”https://pubmed.ncbi.nlm.nih.gov/31652616/”>Nawadita Paruajuli (2019)</a>
                 
               Testing And Evaluation.
