Update literature reference with hyperlink

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <tr>
     <td>Gesture Recognition Accuracy</td>
     <td>91.8 +/- 3.2%</td>
-    <td>Similar to 92–96% reported in literature (https://pubmed.ncbi.nlm.nih.gov/25955989)</td>
+    <td>Similar to 92–96% reported in literature <a href=https://pubmed.ncbi.nlm.nih.gov/25955989>Adenike A Adewuyi</a>
   </tr>
   <tr>
     <td>Response Time</td>
