--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               muscle recognition patterns which is more reliable and easier to control. Research also shows that pattern recognition is faster than any other technique in prosthetic control. <a href=”https://pubmed.ncbi.nlm.nih.gov/31652616/”>Nawadita Paruajuli (2019)</a>
                 
               Testing And Evaluation.
-              The accuracy of the prosthetic showed 90 percent with its latency being fast in response with a reaction speed of 150 milliseconds whilst using hardware costs for 120 pounds under. These numbers align with other smart 
+              The accuracy of the prosthetic hand using other studes showed 90 percent with its latency being fast in response with a reaction speed of 150 milliseconds whilst using hardware costs for 120 pounds under. These numbers align with other smart 
               prosthetics test using a similar design, achieving 93 percent accuracy for wrist movements in amputees in research labs <a href=”https://www.researchgate.net/publication/305697287_Myoelectric_control_of_prosthetic_hands_state-of-the-art_review”>Geethanjali Purushotman (2016)</a>. 
               Also, in real world conditions with less resources.<a href=”https://ms.copernicus.org/articles/12/69/2021/ms-12-69-2021.pdf?utm_source”>Saygin Siddiq Ahmed (2021)</a> These meet the conditions as users must be able to calibrate the hand in under 3 minutes, 
               parts are easily repairable and simple gestures can be performed and most importantly taking on real world constraints such as complexity and cost. <a href=”https://armejournal.org/index.php/arme/article/view/4243?utm”>Pratik Gurav (2024)</a>
@@ -114,7 +114,7 @@
   <tr>
     <th>Parameter</th>
     <th>Result</th>
-    <th>Comparison/Reference</th>
+    <th>Comparison to Commercial Prosthetics</th>
   </tr>
   <tr>
     <td>Gesture Recognition Accuracy</td>
