--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 </tr>
                 </table>
                 <table>
+                  <img src="prosthetic hand.jpg" alt="Banner" width="600" height="300">
               <h3 id="Abstract">Abstract</h3>
               <p class ="ex1">
               <pre>
