--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
               to fix, to make the life of the patient more comfortable. Even further improvements can be made by pushing accuracy further to 97 percent, studies in UC Davis research shows that fusing EMG with other sensing modalities 
               like FMG, creat a non-invasive technique that uses pressure-sensitive sensors to detect muscle activity by measuring changes in muscle volume and surface forces during movement. 
               <a href=”https://engineering.ucdavis.edu/news/combining-signals-could-make-better-control-prosthetics?utm”>Andy Fell 2025</a>
+                <img src="3d-printed-prosthetic-1.avif" alt="Banner" width="400" height="200">
   <tr>
     <th>Parameter</th>
     <th>Result</th>
