Insert video element in index.html
Added a video element to the HTML body.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             </style>
             <body style="background-color:#FFFFFF;margin-left:50px;">
             <hr>
+      <video src='freecompress-EMG SMART HANDS.mp4' width = '800' height='400' controls>
+      </video>
       <!table of contents>
                 <table>
 
