--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 </button>
 <script>
     async function getLastUpdatedTime() {
-        const username = 'nr0025';
-        const repo = 'FY0025';
+        const username = 'FEPSFY6906288';
+        const repo = 'FY6906288';
        
         const url = `https://api.github.com/repos/${username}/${repo}/commits`;
         try {
